<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClockIt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back_to_work_">Back to work?</string>
    <string name="manage_clients_question">Want to manage your clients?</string>
    <string name="clock_in">Clock In</string>
    <string name="create_client">Create Client</string>
    <string name="manage_services_question">Want to manage your services?</string>
    <string name="create_service">Create Service</string>
    <string name="title_activity_create_client">Create Client</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="description">Description:</string>
    <string name="title_activity_create_service">Create Service</string>
    <string name="rate">Rate:</string>
    <string name="title_activity_manage_clients">Manage Clients</string>
    <string name="manage_clients">Manage Clients</string>
    <string name="title_activity_manage_services">Manage Services</string>
    <string name="manage_services">Manage Services</string>
    <string name="starting_a_new_service">Starting a new service?</string>
    <string name="got_a_new_client">Got a new client?</string>
    <string name="title_activity_view_client">View Client</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="title_activity_view_service">View Service</string>

    <string-array name="client_items_array">
        <item>Time Stamps</item>
        <item>Services</item>
        <item>Contacts</item>
    </string-array>
    <string-array name="service_items_array">
        <item>Time Stamps</item>
        <item>Contacts</item>
    </string-array>

    <string name="ddl_prompt">Choose an item</string>
    <string name="associated">associated</string>
    <string name="view">View</string>
    <string name="returns">Return</string>
    <string name="create">Create</string>
    <string name="title_activity_choose_client">Choose Client</string>
    <string name="select_your_client_">Select your client.</string>
    <string name="title_activity_choose_service">Choose Service</string>
    <string name="select_your_service_">Select your service.</string>
    <string name="title_activity_clock_out">Clock Out</string>
    <string name="clock_out_prompt">Enter an optional description of what you did while you were clocked in.</string>
    <string name="clock_out">Clock Out</string>
    <string name="title_activity_manage_time_stamps">Manage Time Stamps</string>
    <string name="manage_time_stamps_question">Want to manage your hours?</string>
    <string name="manage_time_stamps">Manage Time Stamps</string>
    <string name="client_contacts">Client Contact(s)</string>
    <string name="title_activity_manage_client_contacts">Manage Client\'s Contacts</string>
    <string name="title_activity_add_contact">Add Contact</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="populate_from_phone">Populate from Phone</string>
    <string name="add_contact">Add Contact</string>
    <string name="last_name">Last:</string>
    <string name="first_name">First:</string>
    <string name="title_activity_view_client_invoice">View Client Invoice</string>
    <string name="start_time">00:00:00</string>
    <string name="title_activity_invoice_filters_fragment">InvoiceFiltersFragment</string>
    <string name="title_activity_view_time_stamp">View Time Stamp</string>
    <string name="earned_income">Earned Income:</string>

</resources>