<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddContactActivity">

    <Button
        android:id="@+id/btnPhoneContacts"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="populateFromContacts"
        android:text="@string/populate_from_phone"
        android:textSize="26sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/first_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContactFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:inputType="text|textCapWords"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/last_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContactLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/edittext_bg"
            android:inputType="text|textCapWords"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContactEmail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:inputType="textEmailAddress"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:text="@string/phone"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textIsSelectable="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etContactPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:inputType="phone"
            android:textColor="#000000" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnAddContact"
        style="@style/btnStyleShakespeare"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:onClick="addContact"
        android:text="@string/add_contact"
        android:textSize="26sp" />

</LinearLayout>